--- a/MCLawl/MCLawl_.csproj
+++ b/MCLawl/MCLawl_.csproj
@@ -40,6 +40,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -63,6 +64,12 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AStarPathFinderSilverlight">
+      <HintPath>.\AStarPathFinderSilverlight.dll</HintPath>
+    </Reference>
+    <Reference Include="IsoCraft">
+      <HintPath>.\IsoCraft.dll</HintPath>
+    </Reference>
     <Reference Include="Meebey.SmartIrc4net">
       <HintPath>.\Meebey.SmartIrc4net.dll</HintPath>
     </Reference>
@@ -74,6 +81,9 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>.\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -86,8 +96,27 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Added\ColumnDesc.cs" />
+    <Compile Include="Added\Database.cs" />
+    <Compile Include="Added\EmotesHandler.cs" />
+    <Compile Include="Added\Extensions.cs" />
+    <Compile Include="Added\Extensions2.cs" />
+    <Compile Include="Added\HttpUtils.cs" />
+    <Compile Include="Added\IDatabaseBackend.cs" />
+    <Compile Include="Added\Interfaces.cs" />
+    <Compile Include="Added\MySQL.cs" />
+    <Compile Include="Added\OperatingSystem.cs" />
+    <Compile Include="Added\Player2.cs" />
+    <Compile Include="Added\PlayerInfo.cs" />
+    <Compile Include="Added\SQLite.cs" />
+    <Compile Include="Added\SQLiteBackend.cs" />
+    <Compile Include="Added\StringExts.cs" />
+    <Compile Include="Added\Utils2.cs" />
+    <Compile Include="Added\VolatileArray.cs" />
     <Compile Include="AutoSaver.cs" />
     <Compile Include="Block.cs" />
+    <Compile Include="Commands\Added\CmdHost.cs" />
+    <Compile Include="Commands\Added\CmdPClients.cs" />
     <Compile Include="Commands\CmdPossess.cs" />
     <Compile Include="Commands\CmdTColor.cs" />
     <Compile Include="Commands\CmdCmdUnload.cs" />
@@ -176,7 +205,7 @@
     <Compile Include="Commands\CmdRules.cs" />
     <Compile Include="Commands\CmdSave.cs" />
     <Compile Include="Commands\CmdSay.cs" />
-    <Compile Include="Commands\CmdServerReport.cs" />
+    <Compile Include="Commands\Added\Unused\CmdServerReport.cs" />
     <Compile Include="Commands\CmdSetRank.cs" />
     <Compile Include="Commands\CmdSetspawn.cs" />
     <Compile Include="Commands\CmdSpawn.cs" />
@@ -201,7 +230,7 @@
     <Compile Include="Commands\CommandList.cs" />
     <Compile Include="Commands\CmdMegaboid.cs" />
     <Compile Include="Commands\CmdReplaceNot.cs" />
-    <Compile Include="Commands\CmdHost.cs" />
+    <Compile Include="Commands\Added\Unused\CmdHost.cs" />
     <Compile Include="Commands\CmdInvincible.cs" />
     <Compile Include="Commands\CmdLowlag.cs" />
     <Compile Include="Commands\CmdLine.cs" />
