--- a/MCLawl/MCLawl_.csproj
+++ b/MCLawl/MCLawl_.csproj
@@ -372,7 +372,12 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Updater\MCLawlUpdater.csproj">
+      <Project>{6ba05a4e-a43c-4a0b-80e8-720520d64ba6}</Project>
+      <Name>MCLawlUpdater</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
